--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 
-<pre><script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&api_key=AIzaSyDi2LVi_cyDP9ibCRsm-KWlKUX40slMn6g&sensor=false&libraries=visualization">// <![CDATA[
+<pre><script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDi2LVi_cyDP9ibCRsm-KWlKUX40slMn6g&libraries=visualization">// <![CDATA[
 
 // ]]></script>
 <script type="text/javascript">// <![CDATA[
